fix layout issues

--- a/10/assets/css/main.css
+++ b/10/assets/css/main.css
@@ -9,6 +9,7 @@
 body {
     background: #F7F7F7;
 }
+
 .bg_white {
     background: #fff;
     border-radius: 6px;
@@ -17,53 +18,60 @@ body {
 .btn-primary {
     background: #007BFF;
 }
+
 main {
     padding-top: 55px;
 }
-.name_form{
+
+.name_form {
     font-weight: 500;
     font-size: 24px;
     margin-bottom: 20px;
     color: #1C1C1C;
 }
-.sign_up_wrapper{
+
+.sign_up_wrapper {
     padding: 35px;
+    height: 600px;
 }
 
-.sign_up{
+.sign_up {
     width: 100%;
 }
 
-.label_custom{
+.label_custom {
     margin-bottom: 7px;
     font-weight: 400;
     font-size: 15px;
     color: rgba(84, 84, 84, 1);
 }
-.input_custom{
-margin-bottom: 20px;
+
+.input_custom {
+    margin-bottom: 20px;
 }
 
-.text_info{
+.text_info {
     font-weight: 400;
     font-size: 13px;
 }
-.sign_up_info{
+
+.sign_up_info {
     max-width: 410px;
 }
 
-.color_grey{
+.color_grey {
     color: rgba(150, 150, 150, 1);
 }
-.margin_radio{
+
+.margin_radio {
     margin-right: 21px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-.login-link{
+.login-link {
     margin-left: 20px;
 }
 
@@ -78,7 +86,7 @@ a{
     display: none;
 }
 
-.delete_button{
+.delete_button {
     border: 1px solid #E4E4E4;
     height: 30px;
     width: 30px;
@@ -87,7 +95,7 @@ a{
     padding-bottom: 9px;
 }
 
-.photo_button{
+.photo_button {
     height: 30px;
     width: 138px;
     border-radius: 6px;
@@ -95,7 +103,7 @@ a{
     cursor: pointer;
 }
 
-.photo_button>img{
+.photo_button > img {
     margin: 9px;
 }
 
@@ -103,7 +111,7 @@ label {
     cursor: pointer;
 }
 
-.form-control:focus,.form-check-input:active, .form-check-input:checked  {
+.form-control:focus, .form-check-input:active, .form-check-input:checked {
     border-color: rgba(0, 123, 255, 1);
     box-shadow: none;
 }
@@ -122,6 +130,8 @@ label {
 
 .form-control[type="select"], .form-control[type="text"] {
     padding: 8px 10px;
+    font-size: 15px;
+    line-height: 22px;
 }
 
 .form-control {
@@ -149,4 +159,25 @@ hr {
 
 .form_text {
     margin-top: 20px;
+}
+
+.form-check-label {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    letter-spacing: -0.2px;
+    color: #545454;
+    margin: auto;
+    vertical-align: middle;
+    padding-top: 2px;
+}
+
+.form-check-input {
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+}
+
+.email_share {
+    margin-top: 7px;
 }
